# numberscript

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  go.mod  go.sum  index.js  interpreter_test.go  main.go  package.json
lib/: BUILD.bazel  Balanced.js  Handler.js  Parse.js  Stack.js  interpreter.go  isNot.js
lib/util/: BUILD.bazel  main.go
lib/util/testutil/: BUILD.bazel  main.go
louisbuchbinder.com/: BUILD.bazel  main.go
louisbuchbinder.com/encoding/hex/: index.html
louisbuchbinder.com/lib/: BUILD.bazel  GoFS.ts  GoFile.ts  OpfsFS.ts  OpfsFile.ts  sw.main.ts  tsconfig.json
louisbuchbinder.com/static/css/: site.css
louisbuchbinder.com/static/js/: site.js
louisbuchbinder.com/static/js/routes/: filesystem.js
louisbuchbinder.com/templates/: BUILD.bazel  document.html  embed.go  link.html  main.go  navbar.html  opfs.html  script.html  sw.js  template.bzl  wasm_playground.html  wasm_playground_main.html  wasm_playground_menu.html
louisbuchbinder.com/test/: BUILD.bazel  crypto.go  encoding.go  encoding_test.go  hash.go  hash_test.go  main.go  main_test.go  test.go  test.sh
numberscript/: README.md
numberscript/test/: fibonacci.ns
rules/: utils.bzl
test/: alphabet.expect  alphabet.ns  basicStackExample.ns  hello.ns  index.js  printNumber.ns
wasm/: BUILD.bazel  main.go  rules.bzl
wasm/archive/zip/: BUILD.bazel  wasm.go
wasm/archive/zip/pkg/: BUILD.bazel
wasm/crypto/aes/: BUILD.bazel  wasm.go
wasm/crypto/aes/pkg/: BUILD.bazel
wasm/crypto/ecdh/: BUILD.bazel  wasm.go
wasm/crypto/ecdh/pkg/: BUILD.bazel
wasm/crypto/ecdsa/: BUILD.bazel  wasm.go
wasm/crypto/ecdsa/pkg/: BUILD.bazel
wasm/crypto/ed25519/: BUILD.bazel  wasm.go
wasm/crypto/ed25519/pkg/: BUILD.bazel
wasm/crypto/hmac/: BUILD.bazel  wasm.go
wasm/crypto/hmac/pkg/: BUILD.bazel
wasm/crypto/md5/: BUILD.bazel  wasm.go
wasm/crypto/md5/pkg/: BUILD.bazel
wasm/crypto/pbkdf2/: BUILD.bazel  wasm.go
wasm/crypto/pbkdf2/pkg/: BUILD.bazel
wasm/crypto/rand/: BUILD.bazel  wasm.go
wasm/crypto/rand/pkg/: BUILD.bazel
wasm/crypto/sha1/: BUILD.bazel  wasm.go
wasm/crypto/sha1/pkg/: BUILD.bazel
wasm/crypto/sha256/: BUILD.bazel  wasm.go
wasm/crypto/sha256/pkg/: BUILD.bazel
wasm/crypto/sha3/: BUILD.bazel  wasm.go
wasm/crypto/sha3/pkg/: BUILD.bazel
wasm/crypto/sha512/: BUILD.bazel  wasm.go
wasm/crypto/sha512/pkg/: BUILD.bazel
wasm/encoding/base32/: BUILD.bazel  wasm.go
wasm/encoding/base32/pkg/: BUILD.bazel
wasm/encoding/base64/: BUILD.bazel  wasm.go
wasm/encoding/base64/pkg/: BUILD.bazel
wasm/encoding/hex/: BUILD.bazel  wasm.go
wasm/encoding/hex/pkg/: BUILD.bazel
wasm/encoding/html/: BUILD.bazel  main.go
wasm/encoding/html/pkg/: BUILD.bazel
wasm/hash/adler32/: BUILD.bazel  wasm.go
wasm/hash/adler32/pkg/: BUILD.bazel
wasm/hash/crc32/: BUILD.bazel  wasm.go
wasm/hash/crc32/pkg/: BUILD.bazel
wasm/hash/crc64/: BUILD.bazel  wasm.go
wasm/hash/crc64/pkg/: BUILD.bazel
wasm/hash/fnv/: BUILD.bazel  wasm.go
wasm/hash/fnv/pkg/: BUILD.bazel
wasm/html/script/: BUILD.bazel  main.go
wasm/js/: BUILD.bazel  file.go  fileWriter.go  fs.go  main.go  routes.go
wasm/js/script/: BUILD.bazel  main.go
wasm/math/: BUILD.bazel  wasm.go
wasm/math/pkg/: BUILD.bazel
wasm/routes/filesystem/: BUILD.bazel  filesystem.html  wasm.go
wasm/routes/filesystem/pkg/: BUILD.bazel
