load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/louisbuchbinder/core
gazelle(name = "gazelle")

go_library(
    name = "core_lib",
    srcs = ["main.go"],
    importpath = "github.com/louisbuchbinder/core",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "core",
    embed = [":core_lib"],
    visibility = ["//visibility:public"],
)
