"""
"""

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_shell", version = "0.5.1")
bazel_dep(name = "gazelle", version = "0.44.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.1", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_chromedp_cdproto", "com_github_chromedp_chromedp", "com_github_google_uuid", "com_github_stretchr_testify")

include("//external/github.com/jgthms/bulma:bulma.MODULE.bazel")

include("//external/github.com/FontAwesome/Font-Awesome:font-awesome.MODULE.bazel")

include("//external/github.com/microsoft/TypeScript:typescript.MODULE.bazel")

include("//external/github.com/bigskysoftware/htmx:htmx.MODULE.bazel")

include("//external/nodejs.org:nodejs.MODULE.bazel")
