load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "wasm",
    srcs = ["main.go"],
    importpath = "github.com/louisbuchbinder/core/wasm",
    visibility = ["//visibility:public"],
)

# copy wasm_exec from source
# cp .bazel/core/external/rules_go++go_sdk+go_sdk/lib/wasm/wasm_exec.js wasm/go1.25.0_wasm_exec.js
genrule(
    name = "external",
    srcs = [":go1.25.0_wasm_exec.js"],
    outs = ["external.tar"],
    cmd = """
        mkdir -p wasm/external
        cp $(location :go1.25.0_wasm_exec.js) wasm/external
        tar -cf  $(location :external.tar) wasm/external/*
    """,
)

dist_srcs = [
    ":external.tar",
    "//wasm/archive/zip/pkg:dist",
    "//wasm/crypto/aes/pkg:dist",
    "//wasm/crypto/ecdh/pkg:dist",
    "//wasm/crypto/ecdsa/pkg:dist",
    "//wasm/crypto/ed25519/pkg:dist",
    "//wasm/crypto/hmac/pkg:dist",
    "//wasm/crypto/md5/pkg:dist",
    "//wasm/crypto/pbkdf2/pkg:dist",
    "//wasm/crypto/rand/pkg:dist",
    "//wasm/crypto/sha1/pkg:dist",
    "//wasm/crypto/sha3/pkg:dist",
    "//wasm/crypto/sha256/pkg:dist",
    "//wasm/crypto/sha512/pkg:dist",
    "//wasm/encoding/base32/pkg:dist",
    "//wasm/encoding/base64/pkg:dist",
    "//wasm/encoding/hex/pkg:dist",
    "//wasm/encoding/html/pkg:dist",
    "//wasm/hash/adler32/pkg:dist",
    "//wasm/hash/crc32/pkg:dist",
    "//wasm/hash/crc64/pkg:dist",
    "//wasm/hash/fnv/pkg:dist",
    "//wasm/math/pkg:dist",
    "//wasm/routes/filesystem/pkg:dist",
]

genrule(
    name = "dist",
    srcs = dist_srcs,
    outs = ["wasm.tar"],
    cmd = """
    mkdir archive
    {extract_pkgs}
    cd archive
    find . -type f | xargs \
        tar -cf ../$(location :wasm.tar)
    """.format(
        extract_pkgs = "\n".join([
            "tar -xf $(location {}) -C archive".format(src)
            for src in dist_srcs
        ]),
    ),
    visibility = ["//visibility:public"],
)
