filegroup(
    name = "ts_srcs",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        allow_empty = True,
        exclude = ["node_modules/**/*"],
    ),
)

genrule(
    name = "tsc",
    srcs = [
        ":ts_srcs",
        ":tsconfig.json",
        "@typescript-5.9.3//:bin_tsc",
        "@typescript-5.9.3//:typescript",
    ],
    outs = [
        "tsc.tar",
    ],
    cmd = """
    mkdir -p archive/js
    $(location @node-v22.20.0-darwin-x64//:node) \
        $(location @typescript-5.9.3//:bin_tsc) \
        --project $(location tsconfig.json) \
        --outDir  archive/js
    $(location //lib/build/manifest/entries) --dir archive/js
    cd archive
    find . -type f | xargs tar -cf ../$(location tsc.tar)
    """,
    tools = [
        "//lib/build/manifest/entries",
        "@node-v22.20.0-darwin-x64//:node",
    ],
    visibility = ["//visibility:public"],
)
