load("@rules_go//go:def.bzl", "go_library")
load("//:rules/utils.bzl", "write")
load(":template.bzl", "render_templates_embed_go", "template", "template_struct_field")

templates = [
    template(
        name = "Document",
        const_name = "DOCUMENT",
        filename = "document.html",
        struct_fields_list = [
            template_struct_field(
                name = "Title",
                type = "string",
            ),
            template_struct_field(
                name = "Links",
                type = "template.HTML",
            ),
            template_struct_field(
                name = "Scripts",
                type = "template.HTML",
            ),
            template_struct_field(
                name = "Navbar",
                type = "template.HTML",
            ),
            template_struct_field(
                name = "Main",
                type = "template.HTML",
            ),
        ],
    ),
    template(
        name = "Link",
        const_name = "LINK",
        filename = "link.html",
        struct_fields_list = [
            template_struct_field(
                name = "Rel",
                type = "string",
            ),
            template_struct_field(
                name = "Href",
                type = "string",
            ),
            template_struct_field(
                name = "Attrs",
                type = "template.HTMLAttr",
            ),
        ],
    ),
    template(
        name = "Script",
        const_name = "SCRIPT",
        filename = "script.html",
        struct_fields_list = [
            template_struct_field(
                name = "Src",
                type = "string",
            ),
            template_struct_field(
                name = "Attrs",
                type = "template.HTMLAttr",
            ),
        ],
    ),
    template(
        name = "Home",
        const_name = "HOME",
        filename = "home.html",
        struct_fields_list = [
        ],
    ),
    template(
        name = "Navbar",
        const_name = "NAVBAR",
        filename = "navbar.html",
        struct_fields_list = [],
    ),
    template(
        name = "WasmPlaygroundMain",
        const_name = "WASM_PLAYGROUND_MAIN",
        filename = "wasm_playground_main.html",
        struct_fields_list = [
            template_struct_field(
                name = "Title",
                type = "string",
            ),
            template_struct_field(
                name = "Menu",
                type = "template.HTML",
            ),
            template_struct_field(
                name = "Items",
                type = "[]WasmPlaygroundMainMenuItem",
            ),
        ],
    ),
    template(
        name = "WasmPlayground",
        const_name = "WASM_PLAYGROUND",
        filename = "wasm_playground.html",
        struct_fields_list = [
            template_struct_field(
                name = "Title",
                type = "string",
            ),
            template_struct_field(
                name = "Menu",
                type = "template.HTML",
            ),
            template_struct_field(
                name = "Tabs",
                type = "[]WasmPlaygroundTab",
            ),
        ],
    ),
    template(
        name = "WasmPlaygroundMenu",
        const_name = "WASM_PLAYGROUND_MENU",
        filename = "wasm_playground_menu.html",
        struct_fields_list = [
            template_struct_field(
                name = "Containers",
                type = "[]WasmPlaygroundMenuItemContainer",
            ),
            template_struct_field(
                name = "ActiveContainer",
                type = "string",
            ),
            template_struct_field(
                name = "ActiveItem",
                type = "string",
            ),
        ],
    ),
]

write(
    name = "embed",
    content = render_templates_embed_go(templates),
    out_file = "embed.go",
)

# gazelle:exclude embed.go
go_library(
    name = "templates",
    srcs = [
        "main.go",
        ":embed.go",  #keep
    ],
    embedsrcs = [t.filename for t in templates],  #keep
    importpath = "github.com/louisbuchbinder/core/louisbuchbinder.com/templates",
    visibility = ["//visibility:public"],
    deps = ["//lib/util"],
)
