load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test",
    srcs = [
        "encoding.go",
        "hash.go",
        "main.go",
    ],
    data = ["//louisbuchbinder.com"],
    importpath = "github.com/louisbuchbinder/core/louisbuchbinder.com/test",
    visibility = ["//visibility:private"],
    x_defs = {
        "serverExeRlocation": "$(rlocationpath //louisbuchbinder.com)",
    },
    deps = [
        "//lib/util",
        "@com_github_chromedp_cdproto//cdp",
        "@com_github_chromedp_cdproto//target",
        "@com_github_chromedp_chromedp//:chromedp",
        "@rules_go//go/runfiles",
    ],
)

go_test(
    name = "test_test",
    srcs = [
        "encoding_test.go",
        "hash_test.go",
        "main_test.go",
    ],
    embed = [":test"],
    deps = [
        "//lib/util",
        "//lib/util/testutil",
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)
