# gazelle:ignore
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "js",
    srcs = select({
        "@rules_go//go/platform:js": [
            "file.go",
            "fileWriter.go",
            "fs.go",
            "main.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/louisbuchbinder/core/wasm/js",
    visibility = ["//visibility:public"],
    deps = ["//wasm"],
)
