load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "script_lib",
    srcs = ["main.go"],
    importpath = "github.com/louisbuchbinder/core/wasm/html/script",
    visibility = ["//visibility:private"],
    deps = ["//lib/util"],
)

go_binary(
    name = "script",
    embed = [":script_lib"],
    visibility = ["//visibility:public"],
)
