# gazelle:ignore
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//wasm:rules.bzl", "wasm_dist", "wasm_go", "wasm_html", "wasm_js")

module = "wasm/math"

wasm_exports = [
    "wasm.math.Abs",
    "wasm.math.Abs",
    "wasm.math.Acos",
    "wasm.math.Acosh",
    "wasm.math.Asin",
    "wasm.math.Asinh",
    "wasm.math.Atan",
    "wasm.math.Atan2",
    "wasm.math.Atanh",
    "wasm.math.Cbrt",
    "wasm.math.Ceil",
    "wasm.math.Copysign",
    "wasm.math.Cos",
    "wasm.math.Cosh",
    "wasm.math.Dim",
    "wasm.math.Erf",
    "wasm.math.Erfc",
    "wasm.math.Erfcinv",
    "wasm.math.Erfinv",
    "wasm.math.Exp",
    "wasm.math.Exp2",
    "wasm.math.Expm1",
    "wasm.math.FMA",
    # "wasm.math.Float32bits",
    # "wasm.math.Float32frombits",
    # "wasm.math.Float64bits",
    # "wasm.math.Float64frombits",
    "wasm.math.Floor",
    # "wasm.math.Frexp",
    "wasm.math.Gamma",
    "wasm.math.Hypot",
    "wasm.math.Ilogb",
    "wasm.math.J0",
    "wasm.math.J1",
    "wasm.math.Jn",
    # "wasm.math.Ldexp",
    # "wasm.math.Lgamma",
    "wasm.math.Log",
    "wasm.math.Log10",
    "wasm.math.Log1p",
    "wasm.math.Log2",
    "wasm.math.Logb",
    "wasm.math.Max",
    "wasm.math.Min",
    "wasm.math.Mod",
    # "wasm.math.Modf",
    "wasm.math.Nextafter",
    "wasm.math.Nextafter32",
    "wasm.math.Pow",
    "wasm.math.Pow10",
    "wasm.math.Remainder",
    "wasm.math.Round",
    "wasm.math.RoundToEven",
    # "wasm.math.Signbit",
    "wasm.math.Sin",
    # "wasm.math.Sincos",
    "wasm.math.Sinh",
    "wasm.math.Sqrt",
    "wasm.math.Tan",
    "wasm.math.Tanh",
    "wasm.math.Trunc",
    "wasm.math.Y0",
    "wasm.math.Y1",
    "wasm.math.Yn",
]

wasm_js(
    name = "wasm_js",
    module = module,
    wasm_exports = wasm_exports,
)

wasm_go(
    name = "wasm.go",
    wasm_exports = wasm_exports,
)

wasm_html(
    name = "script.partial",
    module = module,
)

wasm_dist(
    name = "dist",
    module = module,
)

go_library(
    name = "pkg_lib",
    srcs = select({
        "@rules_go//go/platform:js": [
            ":wasm.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/louisbuchbinder/core/" + module + "/pkg",
    visibility = ["//visibility:private"],
    deps = [
        "//wasm",
        "//" + module,
        "//wasm/js",
    ],
)

go_binary(
    name = "pkg",
    embed = [":pkg_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
