# gazelle:ignore
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "filesystem",
    srcs = select({
        "@rules_go//go/platform:js": [
            "wasm.go",
        ],
        "//conditions:default": [],
    }),
    embedsrcs = ["filesystem.html"],
    importpath = "github.com/louisbuchbinder/core/wasm/routes/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/util",
        "//wasm",
        "//wasm/js",
    ],
)
